# FaceReconstructionProject-Cpp

./: .gitignore  CMakeLists.txt  README.md  design.md  diagrams copy.md  summary_paper.md
BFM_basic_pipeline/: CMakeLists.txt  README.md
BFM_basic_pipeline/Data/: map_dlib-bfm_rk.anl
BFM_basic_pipeline/MeshGen/: ex_gen_faces.cpp
BFM_basic_pipeline/include/: bfm_manager.h  data.hpp  transform.hpp
BFM_basic_pipeline/src/: bfm_manager.cpp
examples/: MeshGen.cpp  bfm_init.cpp  bunny_procrustes.cpp  example_ceres_optimizer.cpp  icp_pe.cpp  optimization-rk.cpp  optimization-rk_ALL.cpp  optimization-rk_sparse.cpp  parameter_estimation.cpp  pose_estimation.cpp  procrustes_pe.cpp  utils.cpp  withoutOpencv_optimization-rk.cpp
include/: BFM.h  Eigen.h  FPC_ICPOptimizer.h  FacePointCloud.h  FacialLandmarkExtractor.h  FreeImageHelper.h  ICPOptimizer.h  NearestNeighbor.h  NearestNeighbor_poseEstimate.h  Optimizer-ALL.h  Optimizer-sparse.h  Optimizer.h  Optimizer_AutoDiff.h  Optimizer_NumDiff.h  PointCloud.h  ProcrustesAligner.h  RGBImage.h  SimpleMesh.h  SimpleMesh_bfm.h  SimpleMesh_forCeresExample.h  bfm_manager.cpp  bfm_manager.h  data.hpp  double_NearestNeighbor.h
realtime_facial_landmark_detection_demo/: CMakeLists.txt  README.md  realtime_landmark_detection.cpp
src/: CMakeLists.txt  Optimizer.cpp  bfm_manager.cpp  main.cpp
tools/: batch_process.sh  visualisation.py
